Add create assignment api.
